Fixed glitch with "picks" on small resolutions

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -182,6 +182,11 @@ h1 {
     height: 25px;
     position: absolute;
     width: 100px;
+
+    @media (max-width: $screen-md) {
+      margin: 1em auto;
+      position: static;
+    }
   }
 }
 
